<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="top.devonte.note.activity.ui.file.FileFragment"
        android:label="@string/title_files"
        tools:layout="@layout/fragment_file" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="top.devonte.note.activity.ui.folder.FolderFragment"
        android:label="@string/title_folder"
        tools:layout="@layout/fragment_folder" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="top.devonte.note.activity.ui.user.UsersFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />
</navigation>